change some email settings

--- a/email/email_template_checkout.html
+++ b/email/email_template_checkout.html
@@ -22,14 +22,15 @@ $EMAIL_COMMON_CSS
   <div class="content">
     <div class="content-line">
       $EMAIL_TEXT_HEADER <br /><br />
-      $EMAIL_FIRST_NAME $EMAIL_LAST_NAME,<br />
+      <b>$EMAIL_FIRST_NAME $EMAIL_LAST_NAME</b>,<br />
       $EMAIL_THANKS_FOR_SHOPPING<br />
       $EMAIL_DETAILS_FOLLOW<br /><br />
 
-      $INTRO_ORDER_NUM_TITLE $INTRO_ORDER_NUMBER<br />
-      $INTRO_DATE_TITLE $INTRO_DATE_ORDERED<br />
+      <b>$INTRO_ORDER_NUM_TITLE</b> &nbsp;&nbsp; $INTRO_ORDER_NUMBER<br />
+      <b>$INTRO_DATE_TITLE</b> &nbsp;&nbsp; $INTRO_DATE_ORDERED<br />
       <a href="$INTRO_URL_VALUE">$INTRO_URL_TEXT</a>
   </div>
+  <br />
   <div class="content-line"><strong>$PRODUCTS_TITLE</strong></div>
     <div class="order-detail-area">$PRODUCTS_DETAIL</div>
   <div class="order-detail-area">$ORDER_TOTALS</div>
